--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100vw;
+  min-height: 100vh;
   text-align: center;
+  max-width: 1600px;
 }
 
 .logo {
